Add: routes controller

--- a/src/views/business.ejs
+++ b/src/views/business.ejs
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="./style/style.css" />
   <body>
-    <div class="div">
-      <h1>This is a Heading</h1>
-      <p>This is a paragraph.</p>
-      <p>This is another paragraph.</p>
-    </div>
+    <%- include('./partials/header') %>
+    <h2>This is business page</h2>
   </body>
 </html>
