Add: each table section

--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -12,18 +12,40 @@
   justify-content: space-between;
 }
 
-#header-links a,
-#header-links li {
-  text-decoration: none;
+li {
   list-style: none;
+}
+a {
+  text-decoration: none;
   color: rgb(36, 35, 35);
 }
+
 #header-links a:hover {
   color: rgb(95, 95, 95);
 }
 
 h2 {
   text-align: center;
+}
+
+table {
+  margin: auto;
+  border-spacing: 0;
+}
+
+thead th {
+  background-color: rgb(164, 198, 211);
+}
+
+table,
+th,
+td {
+  border: 1px solid;
+}
+
+tr:hover {
+  cursor: pointer;
+  background-color: rgb(231, 231, 231);
 }
 
 /* 1. Use a more-intuitive box-sizing model */
@@ -45,12 +67,17 @@ h2 {
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
   /* 4. Add accessible line-height */
   line-height: 1.5;
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 100%;
 }
 
 /* 6. Improve media defaults */
