--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,7 @@
 <header id="main-header">
-  <h1><span style="color: rgb(62, 104, 184)">Founder</span> Hub</h1>
+  <a href="/">
+    <h1><span style="color: rgb(62, 104, 184)">Founder</span> Hub</h1>
+  </a>
   <ul id="header-links">
     <li><a href="entrepreneur">Entrepreneurs</a></li>
     <li><a href="business">Businesses</a></li>
