--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -1,3 +1,18 @@
+#index-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  height: 70%;
+  max-width: 700px;
+  margin: auto;
+  text-align: center;
+}
+
+#index-page p {
+  font-size: 1.52rem;
+}
+
 #main-header {
   box-shadow: 0 2px 10px rgb(217, 217, 217);
   height: 5rem;
@@ -28,24 +43,41 @@ h2 {
   text-align: center;
 }
 
+#table-container {
+  max-width: 1100px;
+  margin: auto;
+  background-color: white;
+  box-shadow: 2px 2px 10px rgb(218, 217, 217);
+  border-radius: 10px;
+  margin-top: 2rem;
+}
+
 table {
   margin: auto;
   border-spacing: 0;
+  min-width: 1000px;
+}
+
+caption {
+  text-align: left;
+  font-size: 2rem;
+  color: rgb(62, 104, 184);
 }
 
 thead th {
-  background-color: rgb(164, 198, 211);
+  background-color: rgb(248, 246, 246);
 }
 
-table,
-th,
-td {
-  border: 1px solid;
+td,
+th {
+  border-bottom: 1px solid rgb(177, 174, 174);
+  text-align: left;
+  height: 3rem;
 }
 
 tr:hover {
   cursor: pointer;
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(248, 246, 246);
 }
 
 /* 1. Use a more-intuitive box-sizing model */
@@ -78,6 +110,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   height: 100%;
+  background-color: rgb(253, 253, 253);
 }
 
 /* 6. Improve media defaults */
