Fix: fixed relative path stacking in browser url

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,8 +3,8 @@
     <h1><span style="color: rgb(62, 104, 184)">Founder</span> Hub</h1>
   </a>
   <ul id="header-links">
-    <li><a href="entrepreneur">Entrepreneurs</a></li>
-    <li><a href="business">Businesses</a></li>
-    <li><a href="role">Roles & Relationships</a></li>
+    <li><a href="/view/entrepreneur">Entrepreneurs</a></li>
+    <li><a href="/view/business">Businesses</a></li>
+    <li><a href="/view/role">Roles & Relationships</a></li>
   </ul>
 </header>
