--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <title>Founder Hub</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="./style/style.css" />
+  <link rel="stylesheet" href="/style/style.css" />
   <body>
     <%- include('./partials/header') %>
     <div id="index-page">
