Edit: remoed border bottom from last row in each table

--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -75,6 +75,11 @@ th {
   height: 3rem;
 }
 
+tr:last-of-type td,
+tr:last-of-type th {
+  border-bottom: none !important;
+}
+
 tr:hover {
   cursor: pointer;
   background-color: rgb(248, 246, 246);
