--- a/src/views/business.ejs
+++ b/src/views/business.ejs
@@ -19,16 +19,16 @@
         <tbody>
             <% rows.forEach(row => { %>
             <tr>
-              <th scope="row" style="text-align: left;">
+              <th scope="row">
                 <%= row.business_name %>
               </th>
-              <td style="text-align: center;">
+              <td>
                 <%= row.foundation_year %>
               </td>
               <td>
                 <%= row.industry %>
               </td>
-              <td style="text-align: left;">
+              <td>
                 $
                 <%= row.starting_capital %>
               </td>
