--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,12 @@
       </h2>
       <p>
         Web page where you can view, add and modify list of most successful
-        entrepreneurs and businesses in modern history.
+        <a style="color: rgb(62, 104, 184)" href="/view/entrepreneur"
+          >entrepreneurs</a
+        >
+        and
+        <a style="color: rgb(62, 104, 184)" href="/view/business">businesses</a>
+        in modern history.
       </p>
     </div>
   </body>
