--- a/src/views/role.ejs
+++ b/src/views/role.ejs
@@ -17,10 +17,10 @@
         <tbody>
             <% rows.forEach(row => { %>
             <tr>
-              <th scope="row" style="text-align: left;">
+              <th scope="row">
                 <%= row.name %>
               </th>
-              <td style="text-align: center;">
+              <td >
                 <%= row.business_name %>
               </td>
               <td>
