--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -50,6 +50,7 @@ h2 {
   box-shadow: 2px 2px 10px rgb(218, 217, 217);
   border-radius: 10px;
   margin-top: 2rem;
+  min-height: 65vh;
 }
 
 table {
@@ -72,17 +73,42 @@ td,
 th {
   border-bottom: 1px solid rgb(177, 174, 174);
   text-align: left;
-  height: 3rem;
+  height: 4rem;
 }
 
-tr:last-of-type td,
-tr:last-of-type th {
+tfoot tr:last-of-type td,
+tfoot tr:last-of-type th {
   border-bottom: none !important;
 }
 
-tr:hover {
+tbody tr:hover {
   cursor: pointer;
   background-color: rgb(248, 246, 246);
+}
+
+.person-row:hover {
+  background-color: white !important;
+}
+
+.edit-btn,
+.delete-btn,
+.add-btn {
+  border: none;
+  background-color: white;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.edit-btn {
+  color: rgb(62, 104, 184);
+}
+
+.add-btn {
+  color: green;
+}
+
+.delete-btn {
+  color: red;
 }
 
 /* 1. Use a more-intuitive box-sizing model */
