--- a/src/views/business.ejs
+++ b/src/views/business.ejs
@@ -37,11 +37,23 @@
                 <%= row.headquarters %>
               </td>
               <td>
-                <a style="font-weight: bold; color: green" href="id/<%= row.entrepreneur_id %>">View</a>
+                <a class="add-btn" href="id/<%= row.entrepreneur_id %>">View</a>
               </td>
             </tr>
           <% }); %>
         </tbody>
+        <tfoot>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td style="text-align: left">
+            <a class="add-btn"  href="/">Add</a>
+          </td>
+        </tr>
+      </tfoot>
       </table>
     </div>
   </body>
