--- a/src/views/role.ejs
+++ b/src/views/role.ejs
@@ -28,11 +28,21 @@
                 <%= row.role %>
               </td>
               <td>
-                <a style="font-weight: bold; color: green" href="id/<%= row.id %>">View</a>
+                <a class="add-btn" href="id/<%= row.id %>">View</a>
               </td>
             </tr>
           <% }); %>
         </tbody>
+        <tfoot>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td style="text-align: left">
+            <a class="add-btn" href="/">Add</a>
+          </td>
+        </tr>
+      </tfoot>
       </table>
     </div>
   </body>
