--- a/src/views/business.ejs
+++ b/src/views/business.ejs
@@ -50,7 +50,7 @@
           <td></td>
           <td></td>
           <td style="text-align: left">
-            <a class="add-btn"  href="/">Add</a>
+            <a class="add-btn"  href="/new">Add</a>
           </td>
         </tr>
       </tfoot>
