Add: post data to insert new data to table

--- a/src/views/role.ejs
+++ b/src/views/role.ejs
@@ -39,7 +39,7 @@
           <td></td>
           <td></td>
           <td style="text-align: left">
-            <a class="add-btn" href="/new">Add</a>
+            <a class="add-btn add-btn-last" href="/new">Add</a>
           </td>
         </tr>
       </tfoot>
