--- a/src/views/newPerson.ejs
+++ b/src/views/newPerson.ejs
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/style/style.css" />
   <body>
     <%- include('./partials/header') %>
-    <form action="/new" method="post">
+    <form action="/new" method="post" class="new-pers-form">
       <h2><span style="color: rgb(62, 104, 184)">Entrepreneur</span> Data</h2>
 
       <div class="input-group">
