--- a/src/views/newPerson.ejs
+++ b/src/views/newPerson.ejs
@@ -94,7 +94,7 @@
           <input required type="text" name="hqLocation" id="hq" />
         </div>
       </div>
-      <button type="submit">Add</button>
+      <button class="submit-form-btn" type="submit">ADD</button>
       <% if (locals.errors) {%>
       <ul>
         <% errors.forEach(function(error) { %>
